--- a/index.html
+++ b/index.html
@@ -555,7 +555,7 @@
                     <button class="btn primary"
                         onclick=" document.getElementById('skills').scrollIntoView({behavior:'smooth'})"><i
                             class="fa-solid fa-lightbulb"></i>&nbsp; Skills</button>
-                    <a class="btn" href="resume.pdf.pdf" target="_blank" download
+                    <a class="btn" href="resume.pdf.pdf" target="_blank"
                         style=" background:linear-gradient(90deg,var(--accent3),var(--accent4));color:#021114"><i
                             class="fa-solid fa-file-arrow-down"></i>&nbsp;Resume</a>
                 </div>
@@ -769,7 +769,7 @@
 
 
             <p style="margin-top:10px;color:var(--muted)">Email: <a href="mailto:dhharshitha972@gmail.com"
-                    style="color:#bfeeff">dhharshitha972@gmail.com</a> • Phone: +91 8792144642</p>
+                    style="color:#bfeeff">dhharshitha972@gmail.com</a></p>
         </section>
     </main>
 
